--- a/608/index.html
+++ b/608/index.html
@@ -5,73 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>畢業紀念冊</title>
     <style>
-        /* 基本樣式設定 */
+        /* 網頁背景 */
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-
-        /* 個人資料框 */
-        .profile-box {
-            width: 300px;
-            height: 400px;
-            margin: 20px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            cursor: pointer;
-            display: inline-block;
-        }
-
-        .profile-box img {
-            width: 100%;
-            height: 66%;
-            object-fit: cover;
-            border-bottom: 2px solid #ddd;
-        }
-
-        .profile-box .name {
-            padding: 10px;
+            background-color: #f4f4f4;
             text-align: center;
-            font-size: 18px;
         }
 
-        .profile-box .id {
-            text-align: center;
-            font-size: 16px;
-            color: gray;
-        }
-
-        /* 返回箭頭樣式 */
-        .back-button {
-            position: fixed;
-            top: 15px;
-            left: 15px;
-            width: 50px;
-            height: 50px;
-            background-color: rgba(0, 0, 0, 0.6);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50%;
-            cursor: pointer;
-            transition: background-color 0.2s;
-            z-index: 10;
-        }
-
-        .back-button:hover {
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-
-        /* 照片顯示區域 */
-        #gallery {
+        /* 主要容器 */
+        .container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            padding: 20px;
+            gap: 20px;
+            margin-top: 50px;
+        }
+
+        /* 個人卡片 */
+        .person-card {
+            width: 200px;
+            height: 250px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            padding-top: 20px;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+
+        .person-card:hover {
+            transform: scale(1.05);
+        }
+
+        /* 大頭貼（圓形） */
+        .avatar {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-top: 20px;
+        }
+
+        /* 座號與姓名 */
+        .info {
+            margin-top: 15px;
+            font-size: 18px;
+            font-weight: bold;
+        }
+
+        /* 照片牆 */
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 20px;
         }
 
         .gallery img {
@@ -80,7 +69,6 @@
             object-fit: cover;
             cursor: pointer;
             border-radius: 8px;
-            margin: 10px;
             transition: transform 0.2s;
         }
 
@@ -88,7 +76,7 @@
             transform: scale(1.1);
         }
 
-        /* Modal背景 */
+        /* 模態視窗（放大圖片） */
         .modal {
             display: none;
             position: fixed;
@@ -99,118 +87,125 @@
             background-color: rgba(0, 0, 0, 0.8);
             justify-content: center;
             align-items: center;
-            z-index: 100;
-        }
-
-        .modal-content {
-            position: relative;
-            max-width: 80%;
-            max-height: 80%;
-            overflow: hidden;
         }
 
         .modal img {
-            width: 100%;
-            height: auto;
+            max-width: 90%;
+            max-height: 90%;
+            border-radius: 10px;
         }
 
-        .modal .close {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 30px;
+        /* 返回按鈕 */
+        .back-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #007BFF;
             color: white;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
+        }
+
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+
+        /* 隱藏照片牆 */
+        .hidden {
+            display: none;
         }
     </style>
 </head>
 <body>
-    <!-- 返回箭頭 -->
-    <div id="backButton" class="back-button hidden" onclick="goBack()">
-        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
-            <path d="M15.54 3.54a1.5 1.5 0 0 1 0 2.12L9.21 12l6.33 6.33a1.5 1.5 0 0 1-2.12 2.12l-7.5-7.5a1.5 1.5 0 0 1 0-2.12l7.5-7.5a1.5 1.5 0 0 1 2.12 0z"/>
-        </svg>
-    </div>
 
-    <!-- Modal顯示區域 -->
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <img id="modalImage" src="" alt="Full Image">
+    <h1>畢業紀念冊</h1>
+
+    <div class="container" id="personContainer">
+        <!-- 王大明的卡片 -->
+        <div class="person-card" onclick="openAlbum('1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1&sz=w200" alt="王大明">
+            <div class="info">39 王大明</div>
         </div>
     </div>
 
-    <!-- 顯示王大明的資料頁面 -->
-    <div id="profilePage">
-        <div class="profile-box" onclick="showGallery('1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
-            <img src="https://drive.google.com/uc?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1" alt="大頭貼">
-            <div class="name">王大明</div>
-            <div class="id">39號</div>
-        </div>
-    </div>
+    <!-- 照片牆 -->
+    <div id="photoGallery" class="gallery hidden"></div>
 
-    <!-- 顯示照片 -->
-    <div id="gallery"></div>
+    <!-- 返回按鈕 -->
+    <button id="backButton" class="back-button hidden" onclick="goBack()">返回</button>
+
+    <!-- 模態視窗（放大圖片） -->
+    <div id="modal" class="modal" onclick="closeModal()">
+        <img id="modalImage">
+    </div>
 
     <script>
-        const API_KEY = "AIzaSyD3Q3lspfglPiRXPd1ksROciLdYLD84-y0"; // 替換成你自己的API金鑰
-        const FOLDER_ID = "1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA"; // 王大明的資料夾ID
+        const API_KEY = "AIzaSyD3Q3lspfglPiRXPd1ksROciLdYLD84-y0"; // 你的 API Key
 
-        // 顯示圖片的Modal
-        const modal = document.getElementById("modal");
-        const modalImage = document.getElementById("modalImage");
-        const backButton = document.getElementById("backButton");
-        const gallery = document.getElementById("gallery");
+        function openAlbum(folderId) {
+            // 隱藏原本的個人卡片區域
+            document.getElementById("personContainer").classList.add("hidden");
+            // 顯示照片牆和返回按鈕
+            document.getElementById("photoGallery").classList.remove("hidden");
+            document.getElementById("backButton").classList.remove("hidden");
 
-        // 顯示王大明資料夾內的所有照片
-        async function loadImages() {
-            const API_URL = `https://www.googleapis.com/drive/v3/files?q='%27${FOLDER_ID}%27+in+parents+and+mimeType+contains+%27image%27&key=${API_KEY}&fields=files(id,name)`;
+            const API_URL = `https://www.googleapis.com/drive/v3/files?q=%27${folderId}%27+in+parents+and+mimeType+contains+%27image%27&key=${API_KEY}&fields=files(id,name)`;
 
-            try {
-                const response = await fetch(API_URL);
-                const data = await response.json();
+            fetch(API_URL)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! Status: ${response.status}`);
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    const gallery = document.getElementById("photoGallery");
+                    gallery.innerHTML = ""; // 清空舊圖片
 
-                gallery.innerHTML = ""; // 清除現有圖片
+                    if (!data.files || data.files.length === 0) {
+                        gallery.innerHTML = "<p>這個相簿沒有照片。</p>";
+                        return;
+                    }
 
-                data.files.forEach(file => {
-                    const imgElement = document.createElement('img');
-                    const fileId = file.id;
-                    imgElement.src = `https://drive.google.com/thumbnail?id=${fileId}&sz=w1000`; // 使用縮圖URL並放大
-                    imgElement.alt = file.name;
-                    imgElement.onclick = function() {
-                        modal.style.display = "flex";
-                        modalImage.src = `https://drive.google.com/uc?id=${fileId}`; // 顯示完整圖片
-                    };
-                    gallery.appendChild(imgElement);
+                    data.files.forEach((file) => {
+                        const imgElement = document.createElement("img");
+                        const fileId = file.id;
+
+                        imgElement.src = `https://drive.google.com/thumbnail?id=${fileId}&sz=w300`;
+                        imgElement.alt = file.name;
+                        imgElement.onclick = function () {
+                            openModal(fileId);
+                        };
+
+                        gallery.appendChild(imgElement);
+                    });
+                })
+                .catch(error => {
+                    console.error("錯誤:", error);
+                    document.getElementById("photoGallery").innerHTML = "<p>載入圖片時發生錯誤。</p>";
                 });
-            } catch (error) {
-                console.error("Error loading images:", error);
-            }
         }
 
-        // 點擊返回箭頭，回到王大明的資料頁
-        function goBack() {
-            document.getElementById("profilePage").style.display = "block";
-            document.getElementById("gallery").style.display = "none";
-            backButton.classList.add("hidden");
+        function openModal(id) {
+            const modal = document.getElementById("modal");
+            const modalImage = document.getElementById("modalImage");
+
+            modal.style.display = "flex";
+            modalImage.src = `https://drive.google.com/thumbnail?id=${id}&sz=w1000`; // 顯示較大解析度
         }
 
-        // 顯示圖片集合
-        function showGallery(folderId) {
-            document.getElementById("profilePage").style.display = "none";
-            document.getElementById("gallery").style.display = "block";
-            backButton.classList.remove("hidden");
-            loadImages(); // 加載資料夾內的所有圖片
-        }
-
-        // 關閉Modal
         function closeModal() {
-            modal.style.display = "none";
+            document.getElementById("modal").style.display = "none";
         }
 
-        // 初始化
-        document.getElementById("profilePage").style.display = "block";
-        document.getElementById("gallery").style.display = "none";
+        function goBack() {
+            // 顯示個人卡片區域
+            document.getElementById("personContainer").classList.remove("hidden");
+            // 隱藏照片牆與返回按鈕
+            document.getElementById("photoGallery").classList.add("hidden");
+            document.getElementById("backButton").classList.add("hidden");
+        }
     </script>
+
 </body>
 </html>
