--- a/608/index.html
+++ b/608/index.html
@@ -12,31 +12,19 @@
             text-align: center;
         }
 
-        /* 合照 */
-        .group-photo {
-            width: 80%;
-            margin: 20px auto;
-        }
-
-        .group-photo img {
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
-
         /* 主要容器 */
         .container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             gap: 20px;
-            margin-top: 20px;
+            margin-top: 50px;
         }
 
         /* 個人卡片 */
         .person-card {
-            width: 150px;
-            height: 200px;
+            width: 200px;
+            height: 250px;
             background-color: white;
             border-radius: 10px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
@@ -53,93 +41,21 @@
 
         /* 大頭貼（圓形，修改圓心位置） */
         .avatar {
-            width: 100px;
-            height: 100px;
+            width: 150px;  /* 大小可以根據需求修改 */
+            height: 150px; /* 大小可以根據需求修改 */
             border-radius: 50%;
             object-fit: cover;
             position: absolute;
-            top: 20px; /* 讓圓心位於卡片框的1/3 */
+            top: 30px; /* 讓圓心位於卡片框的1/3 */
             left: 50%;
             transform: translateX(-50%);
         }
 
+        /* 座號與姓名 */
         .info {
             margin-top: 15px;
-            font-size: 16px;
+            font-size: 18px;
             font-weight: bold;
-        }
-
-        /* 響應式設計：手機上每行顯示 2 個 */
-        @media (max-width: 768px) {
-            .container {
-                gap: 10px;
-            }
-
-            .person-card {
-                width: 45%; /* 每行 2 個 */
-                height: 180px; /* 高度適應 */
-            }
-        }
-
-        /* 響應式設計：更小屏幕（例如手機）每行顯示 1 個 */
-        @media (max-width: 480px) {
-            .container {
-                gap: 10px;
-            }
-
-            .person-card {
-                width: 90%; /* 每行 1 個 */
-                height: 180px;
-            }
-        }
-
-        /* 返回箭頭 */
-        .back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            cursor: pointer;
-        }
-
-        .back-button svg {
-            width: 40px;
-            height: 40px;
-        }
-
-        /* 關閉圖片的叉叉按鈕 */
-        .close-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-            background-color: rgba(0, 0, 0, 0.6);
-            border-radius: 50%;
-            padding: 5px;
-        }
-
-        .close-button svg {
-            width: 30px;
-            height: 30px;
-            fill: white;
-        }
-
-        /* 模態視窗（放大圖片） */
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            justify-content: center;
-            align-items: center;
-        }
-
-        .modal img {
-            max-width: 90%;
-            max-height: 90%;
-            border-radius: 10px;
         }
 
         /* 照片牆 */
@@ -164,9 +80,59 @@
             transform: scale(1.1);
         }
 
+        /* 模態視窗（放大圖片） */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal img {
+            max-width: 90%;
+            max-height: 90%;
+            border-radius: 10px;
+        }
+
+        /* 返回箭頭 */
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 10px;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+
+        .back-button:hover {
+            transform: scale(1.1);
+        }
+
         /* 隱藏照片牆 */
         .hidden {
             display: none;
+        }
+
+        /* 關閉模態視窗的叉叉 */
+        .close-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 10px;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+        .close-button:hover {
+            background-color: rgba(255, 0, 0, 0.7);
         }
     </style>
 </head>
@@ -174,41 +140,43 @@
 
     <h1>畢業紀念冊</h1>
 
-    <!-- 合照 -->
-    <div class="group-photo">
-        <img src="合照URL" alt="畢業合照">
-    </div>
-
-    <!-- 主要容器：個人大頭貼 -->
     <div class="container" id="personContainer">
-        <!-- 36個個人卡片 -->
+        <!-- 王大明的卡片 -->
         <div class="person-card" onclick="openAlbum('1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
-            <img class="avatar" src="https://drive.google.com/thumbnail?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1&sz=w200" alt="01 王大明">
-            <div class="info">01 王大明</div>
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1&sz=w200" alt="王大明">
+            <div class="info">39 王大明</div>
         </div>
-        <!-- 其他35個個人卡片... -->
-        <!-- 範例重複35次，記得更換座號及姓名 -->
+
+        <!-- 李小明的卡片 -->
+        <div class="person-card" onclick="openAlbum('1Uk-Cytv_qjelZSzg9UajylDj6ZJIpPRc')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1ycNs-shE-51_Ev3N8XuGjf0q_lp6Ab2C&sz=w200" alt="李小明">
+            <div class="info">10 李小明</div>
+        </div>
+
+        <!-- 王小美的卡片 -->
+        <div class="person-card" onclick="openAlbum('1NO_ER47mXslo5qrMzh1BW9MZ0CeN2SkI')">
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1OOR5CvwK5MLKrtUzBKRetDr35ViTC0VF&sz=w200" alt="王小美">
+            <div class="info">20 王小美</div>
+        </div>
     </div>
 
     <!-- 照片牆 -->
     <div id="photoGallery" class="gallery hidden"></div>
 
-    <!-- 返回按鈕 -->
+    <!-- 返回箭頭 -->
     <div id="backButton" class="back-button hidden" onclick="goBack()">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
             <path d="M15.54 3.54a1.5 1.5 0 0 1 0 2.12L9.21 12l6.33 6.33a1.5 1.5 0 0 1-2.12 2.12l-7.5-7.5a1.5 1.5 0 0 1 0-2.12l7.5-7.5a1.5 1.5 0 0 1 2.12 0z"/>
         </svg>
     </div>
 
-    <!-- 關閉按鈕 -->
-    <div class="close-button" onclick="closeModal()">
-        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="white">
-            <path d="M18 6L6 18M6 6l12 12" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-    </div>
-
     <!-- 模態視窗（放大圖片） -->
     <div id="modal" class="modal" onclick="closeModal()">
+        <div class="close-button" onclick="closeModal()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="white">
+                <path d="M6 18L18 6M6 6l12 12" stroke="white" stroke-width="2"/>
+            </svg>
+        </div>
         <img id="modalImage">
     </div>
 
