--- a/608/index.html
+++ b/608/index.html
@@ -15,12 +15,32 @@
         /* 主要容器（排版根據螢幕大小變動） */
         .container {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            grid-template-columns: repeat(6, 1fr); /* 電腦端固定6欄 */
             gap: 20px;
             justify-content: center;
             max-width: 1200px;
             margin: 50px auto;
         }
+
+        /* 響應式設計 */
+        @media (max-width: 1024px) {
+            .container {
+                grid-template-columns: repeat(4, 1fr); /* 平板 4 欄 */
+            }
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                grid-template-columns: repeat(3, 1fr); /* 小平板 3 欄 */
+            }
+        }
+
+        @media (max-width: 600px) {
+            .container {
+                grid-template-columns: repeat(2, 1fr); /* 手機 2 欄 */
+            }
+        }
+        
 
         /* 個人卡片 */
         .person-card {
@@ -117,7 +137,11 @@
             top: 20px;
             left: 20px;
             background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px;
+            width: 50px;  /* 設定固定寬度 */
+            height: 50px; /* 設定固定高度，確保是圓形 */
+            display: flex;
+            justify-content: center;
+            align-items: center;
             border-radius: 50%;
             cursor: pointer;
             transition: transform 0.2s;
@@ -133,15 +157,21 @@
         }
 
         /* 關閉模態視窗的叉叉 */
-        .close-button {
+       .close-button {
             position: absolute;
-            top: 10px;
-            right: 10px;
+            top: 20px;
+            right: 20px;
             background-color: rgba(0, 0, 0, 0.5);
-            padding: 10px;
+            width: 50px;  /* 固定寬度 */
+            height: 50px; /* 固定高度，確保是圓形 */
+            display: flex;
+            justify-content: center;
+            align-items: center;
             border-radius: 50%;
             cursor: pointer;
+            transition: transform 0.2s;
         }
+
 
         .close-button:hover {
             background-color: rgba(255, 0, 0, 0.7);
