--- a/608/index.html
+++ b/608/index.html
@@ -253,13 +253,13 @@
     <div class="container" id="personContainer">
         <!-- 第一排 -->
         <div class="person-card" onclick="openAlbum('1ljcfzuHufDKM4PcnhENRbbW86q8WQOhA')">
-            <img class="avatar" src="https://drive.google.com/thumbnail?id=1i2tsdJEqIyQfIX7uT55qYD5fPNydmic1&sz=w200" alt="學生01">
-            <div class="info">01 王大明</div>
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1IDmBqbikQsYO9saCO2Y7NjHrRVKGxAqj&sz=w200" alt="學生01">
+            <div class="info">01 呂俞潔</div>
         </div>
 
         <div class="person-card" onclick="openAlbum('1Uk-Cytv_qjelZSzg9UajylDj6ZJIpPRc')">
-            <img class="avatar" src="https://drive.google.com/thumbnail?id=1ycNs-shE-51_Ev3N8XuGjf0q_lp6Ab2C&sz=w200" alt="學生02">
-            <div class="info">02 李小明</div>
+            <img class="avatar" src="https://drive.google.com/thumbnail?id=1rzP_5Y48I23SKiwZ6pCH15I2_cxVKxvU&sz=w200" alt="學生02">
+            <div class="info">02 李其宣</div>
         </div>
 
         <div class="person-card" onclick="openAlbum('1NO_ER47mXslo5qrMzh1BW9MZ0CeN2SkI')">
