--- a/608/index.html
+++ b/608/index.html
@@ -114,15 +114,18 @@
 
         /* 大頭貼（圓形，修改圓心位置） */
         .avatar {
-            width: 150px;  /* 大小可以根據需求修改 */
-            height: 150px; /* 大小可以根據需求修改 */
+            width: 150px;  /* 保持原大小 */
+            height: 150px; /* 保持原大小 */
             border-radius: 50%;
             object-fit: cover;
+            object-position: top; /* 調整圖片對齊到上方 */
+            transform: scale(1.2); /* 放大 1.2 倍（數值可依效果調整） */
             position: absolute;
-            top: 30px; /* 讓圓心位於卡片框的1/3 */
+            top: 20px; /* 可調整，讓頭部位置更自然 */
             left: 50%;
-            transform: translateX(-50%);
+            transform: translateX(-50%) scale(1.2); /* 同時水平置中和放大 */
         }
+
 
         /* 座號與姓名 */
         .info {
