--- a/608/index.html
+++ b/608/index.html
@@ -113,23 +113,17 @@
         }
 
         /* 大頭貼（圓形，修改圓心位置） */
-        .avatar-container {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            overflow: hidden; /* 確保圖片超出的部分不會顯示 */
-            position: relative;
-        }
-        
         .avatar {
-            width: 100%;  /* 讓圖片撐滿容器 */
-            height: 100%;
+            width: 150px;  /* 保持原大小 */
+            height: 150px; /* 保持原大小 */
+            border-radius: 50%;
             object-fit: cover;
-            object-position: top; /* 只顯示上半部 */
+            object-position: top; /* 調整圖片對齊到上方 */
+            transform: scale(1.2); /* 放大 1.2 倍（數值可依效果調整） */
             position: absolute;
-            top: -25%;  /* 向上移動以露出上半部 */
-            left: 0;
-            transform: scale(1.5); /* 只放大內部圖片 */
+            top: 20px; /* 可調整，讓頭部位置更自然 */
+            left: 50%;
+            transform: translateX(-50%) scale(1.2); /* 同時水平置中和放大 */
         }
 
 
