--- a/608/index.html
+++ b/608/index.html
@@ -114,17 +114,16 @@
 
         /* 大頭貼（圓形，修改圓心位置） */
         .avatar {
-            width: 150px;  /* 保持原大小 */
-            height: 150px; /* 保持原大小 */
+            width: 100px;  /* 保持圓形大小 */
+            height: 100px; /* 保持圓形大小 */
             border-radius: 50%;
             object-fit: cover;
-            object-position: top; /* 調整圖片對齊到上方 */
+            object-position: top; /* 讓圖片顯示上半部 */
             position: absolute;
-            top: 20px; /* 可調整，讓頭部位置更自然 */
+            top: 30px; /* 讓圓心位於卡片框的1/3 */
             left: 50%;
-            transform: translateX(-50%); /* 同時水平置中和放大 */
+            transform: translateX(-50%) scale(1.5); /* 放大圖片 */
         }
-
 
 
 
